--- a/DeepPrajapati_FT.html
+++ b/DeepPrajapati_FT.html
@@ -13,6 +13,21 @@
 
   <button id="b3" onclick="addingRow()">Add Row</button>
 
+  <style>
+    html {
+      text-align: center;
+      width: 90%;
+      margin: 0 auto;
+      font-size: x-large;
+    }
+
+    #myTable {
+      text-align: center;
+      margin: 1em auto 1em auto;
+      font-size: x-large;
+    }
+  </style>
+
   <script language="javascript">
     let cellCounter = 0;
 
